--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="assets/css/libs/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/libs/virtual-select.min.css" rel="stylesheet" />
+    
 
     <!-- classes START -->
     <script src="assets/js/tabs/classes/builder/CheckList.js"></script>
@@ -194,6 +195,14 @@
                                     href="#general-tooling-code-highlighter-content" role="tab">
                                     <img data-bs-toggle="tooltip" data-bs-placement="right" title="Code Highlighter"
                                         src="assets/icons/navbar/tab-1-gen-tooling/code-highlighting.png" width="25px"
+                                        height="25px;">
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="general-tooling-code-obfuscation" data-bs-toggle="tab"
+                                    href="#general-tooling-code-obfuscation-content" role="tab">
+                                    <img data-bs-toggle="tooltip" data-bs-placement="right" title="Code obfuscation"
+                                        src="assets/icons/navbar/tab-1-gen-tooling/code-obfuscation.png" width="25px"
                                         height="25px;">
                                 </a>
                             </li>
@@ -390,6 +399,7 @@
                                 </div>
                             </div>
                             <!-- Formatter tab END -->
+                            <!-- code highlight START-->
                             <div class="tab-pane fade" id="general-tooling-code-highlighter-content" role="tabpanel"
                                 style="height: 485px">
                                 <div class="d-flex flex-column justify-content-between h-100">
@@ -461,6 +471,65 @@
 
                                 </div>
                             </div>
+                            <!-- code highlight END -->
+                            <!-- code obfuscation START -->
+                            <div class="tab-pane fade" id="general-tooling-code-obfuscation-content" role="tabpanel"
+                                style="height: 485px">
+                                <div class="d-flex flex-column justify-content-between h-100">
+                                    <div class="mt-2 mb-2">
+                                        <h4> Code obfuscation </h4>
+                                    </div>
+
+                                    <div class="form-group w-100">
+                                        <span>Language</span>
+                                        <select class="form-select" id="general-tooling-code-obfuscation-options">
+                                            <option value="language-javascript" selected> javascript</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="form-group mt-1">
+                                        <span>Input</span>
+                                        <!-- start textarea and copybutton-->
+                                        <div class="position-relative d-flex">
+                                            <label for="general-tooling-code-obfuscation-input"></label><textarea
+                                                id="general-tooling-code-obfuscation-input" class="form-control"
+                                                style="width: 100%; padding-right: 40px; height:160px" data-runtime-command="obfuscateJavascript"></textarea>
+                                            <a href="#">
+                                                <img class="copy-icon" src="assets/icons/general/copy.png"
+                                                    style="position: absolute; bottom: 5px; right: 5px;" height="25px"
+                                                    width="25px" alt="Copy">
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    <span> Output </span>
+                                    <div class="mb-4 mt-1" style="min-height:160px;">
+                                        <div class="d-flex justify-content-between rounded border h-100">
+                                            <pre class="p-0 w-100 h-100"
+                                                id="general-tooling-code-obfuscation-output-pre"><code
+                                                id="general-tooling-code-obfuscation-output-code"
+                                                class="p-2 language-plaintext rounded h-100"
+                                                style="white-space: pre-wrap;"></code></pre>
+                                            <a href="#" class="d-flex flex-column justify-content-end"
+                                                style="width: 6%">
+
+                                                <img id="general-tooling-code-obfuscation-screenshot"
+                                                    class="me-1 mt-1 ms-1 mb-1"
+                                                    src="assets/icons/general/screenshot.png" height="23px" width="23px"
+                                                    alt="screenshot">
+
+                                                <img class="copy-icon-code mt-1 me-1 ms-1 mb-1"
+                                                    src="assets/icons/general/copy.png" height="25px" width="25px"
+                                                    alt="Copy">
+
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!-- code obfuscation END -->
+
 
                         </div>
                         <!-- tab 1 content END -->
